Fix Bookmarks bottom toolbar for iPhone X

The bottom toolbar of the bookmarks should respect the safe area.

New behavior:
https://drive.google.com/open?id=0B21N-0pPGAuJbzB3VUNQeXJPcEE
https://drive.google.com/open?id=0B21N-0pPGAuJdWVpcEZWZ1ZJWHc

Bug: 767030
Change-Id: I4d12848a0ac1f15af7b80612689d795edab367e1
Reviewed-on: https://chromium-review.googlesource.com/675113
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Marti Wong <martiw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503397}
Former-commit-id: 475f70e34a4815f1630501f2ee4e57e6a8060272